# RAG

./: .gitignore  README.md  data_loader.py  main.py  pyproject.toml  vector_db.py
frontend/: __init__.py  app.py
qdrant_storage/: raft_state.json
src/rag/: __init__.py  main.py
src/rag/core/: __init__.py  config.py  exceptions.py
src/rag/db/: __init__.py  qdrant.py
src/rag/models/: __init__.py  schemas.py
src/rag/services/: __init__.py  document_loader.py  embeddings.py  llm.py
src/rag/workflows/: __init__.py  inngest.py
tests/: conftest.py
tests/unit/: test_embeddings.py  test_schemas.py
