[project]
name = "rag"
version = "1.0.0"
description = "Retrieval-Augmented Generation Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "groq>=1.0.0",
    "inngest>=0.5.11",
    "llama-index-core>=0.14.7",
    "llama-index-readers-file>=0.5.4",
    "nest-asyncio>=1.6.0",
    "openai>=2.7.1",
    "pydantic-settings>=2.12.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag", "frontend"]

[tool.pytest.ini_options]
pythonpath = ["src", "frontend"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "frontend", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
